--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -58,6 +58,7 @@
       <div
         class="absolute right-0 mt-2 w-52 bg-white border border-gray-100 rounded-xl shadow-2xl overflow-hidden z-50">
         <button
+          [routerLink]="['/usuarios/perfil']"
           class="w-full text-left px-4 py-3 hover:bg-indigo-50 transition flex items-center gap-3 text-gray-700 border-b border-gray-50">
           <fa-icon [icon]="faUser" class="text-indigo-500"></fa-icon>
           <span class="font-medium">Perfil</span>
