--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen">
+<div class="flex h-screen bg-gray-50">
   <!-- Sidebar -->
   <app-sidebar (sidebarToggled)="onSidebarToggle($event)"></app-sidebar>
 
