--- a/src/app/features/proveedor/components/proveedor-detalle/proveedor-detalle.html
+++ b/src/app/features/proveedor/components/proveedor-detalle/proveedor-detalle.html
@@ -1,3 +1,4 @@
+<!-- src/proveedor/components/proveedor-detalle.html -->
 @if ( loading() ) {
 <div class="flex flex-col items-center justify-center p-10">
   <fa-icon [icon]="faSpinner" class="text-4xl text-blue-500 spin mb-4"></fa-icon>
@@ -75,14 +76,6 @@
       <div>
         <p class="text-sm font-medium text-gray-500">Departamento</p>
         <p class="font-semibold text-gray-800">{{ proveedor()?.departamento }}</p>
-      </div>
-    </div>
-
-    <div class="flex items-center gap-3 bg-gray-50 p-4 rounded-lg shadow-sm">
-      <fa-icon [icon]="faEnvelope" class="text-yellow-500 text-xl"></fa-icon>
-      <div>
-        <p class="text-sm font-medium text-gray-500">Email</p>
-        <p class="font-semibold text-gray-800">{{ proveedor()?.email }}</p>
       </div>
     </div>
 
