--- a/src/app/features/proveedor/components/proveedor-detalle/proveedor-detalle.html
+++ b/src/app/features/proveedor/components/proveedor-detalle/proveedor-detalle.html
@@ -26,7 +26,7 @@
     <li class="inline-flex items-center">
       <span class="mx-2 text-gray-400">/</span>
       <span class="inline-flex items-center text-gray-700">
-        <fa-icon [icon]="faUserTie"></fa-icon>{{ proveedor()?.nombre }}
+        <fa-icon [icon]="faUserTie"></fa-icon>{{ proveedor()?.persona?.nombre }}
       </span>
     </li>
     }
@@ -39,7 +39,7 @@
   <div class="bg-[#ff7676] text-white p-6 flex items-center justify-between">
     <div class="flex items-center gap-4">
       <fa-icon [icon]="faUserTie" class="text-3xl"></fa-icon>
-      <h2 class="text-2xl font-semibold">{{ proveedor()?.nombre }}</h2>
+      <h2 class="text-2xl font-semibold">{{ proveedor()?.persona?.nombre }}</h2>
     </div>
 
   </div>
@@ -50,7 +50,7 @@
       <fa-icon [icon]="faIdCard" class="text-blue-500 text-xl"></fa-icon>
       <div>
         <p class="text-sm font-medium text-gray-500">NIT/CI</p>
-        <p class="font-semibold text-gray-800">{{ proveedor()?.nit_ci }}</p>
+        <p class="font-semibold text-gray-800">{{ proveedor()?.persona?.nit_ci }}</p>
       </div>
     </div>
 
@@ -58,7 +58,7 @@
       <fa-icon [icon]="faPhoneAlt" class="text-green-500 text-xl"></fa-icon>
       <div>
         <p class="text-sm font-medium text-gray-500">Teléfono</p>
-        <p class="font-semibold text-gray-800">{{ proveedor()?.telefono }}</p>
+        <p class="font-semibold text-gray-800">{{ proveedor()?.persona?.telefono }}</p>
       </div>
     </div>
 
@@ -66,7 +66,7 @@
       <fa-icon [icon]="faMapMarkerAlt" class="text-red-500 text-xl"></fa-icon>
       <div>
         <p class="text-sm font-medium text-gray-500">Dirección</p>
-        <p class="font-semibold text-gray-800">{{ proveedor()?.direccion }}</p>
+        <p class="font-semibold text-gray-800">{{ proveedor()?.persona?.direccion }}</p>
       </div>
     </div>
 
@@ -78,13 +78,7 @@
       </div>
     </div>
 
-    <div class="flex items-center gap-3 bg-gray-50 p-4 rounded-lg shadow-sm">
-      <fa-icon [icon]="faEnvelope" class="text-yellow-500 text-xl"></fa-icon>
-      <div>
-        <p class="text-sm font-medium text-gray-500">Email</p>
-        <p class="font-semibold text-gray-800">{{ proveedor()?.email }}</p>
-      </div>
-    </div>
+  
 
     <div class="flex items-center gap-3 bg-gray-50 p-4 rounded-lg shadow-sm">
       <fa-icon [icon]="faToggleOn" class="text-green-500 text-xl"></fa-icon>
